# nedap-ons-uptime

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  20260216_202717_2137ea44d198_add_verify_tls_to_targets.py
my_package/: __about__.py  __init__.py
my_package/cli/: __init__.py  app.py
my_package/utils/: __init__.py  helpers.py
nedap_ons_uptime/: __about__.py  __init__.py  app.py  auth.py  cli.py  config.py  monitoring.py
nedap_ons_uptime/api/: __init__.py  routes.py
nedap_ons_uptime/db/: __init__.py  models.py  session.py
nedap_ons_uptime/static/: app.js  index.html  style.css
tests/: test_api_schemas.py  test_auth.py  test_cli.py  test_config.py  test_monitoring.py  test_utils.py
