[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nedap-ons-uptime"
version = "0.1.0"
description = "Self-hosted uptime dashboard"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["uptime", "monitoring", "dashboard"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "typer>=0.12,<1.0",
  "sqlalchemy>=2,<3",
  "asyncpg>=0.29,<1.0",
  "alembic>=1.13,<2.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "itsdangerous>=2.2,<3"
]

[tool.pdm]

[project.urls]
Homepage = "https://github.com/beecave-homelab/nedap-ons-uptime"
Repository = "https://github.com/beecave-homelab/nedap-ons-uptime"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
nedap-ons-uptime = "nedap_ons_uptime.cli:app"

[tool.setuptools]
packages = ["nedap_ons_uptime"]

[tool.setuptools.package-data]
nedap_ons_uptime = ["static/*"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
